--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: "com.android.application"
+//for firebase
+apply plugin: 'com.google.gms.google-services'
+
 apply plugin: "com.facebook.react"
 
 import com.android.build.OutputFile
@@ -149,6 +152,10 @@ android {
 }
 
 dependencies {
+    //for firebase error
+    // implementation "androidx.browser:browser:1.2.0"
+
+
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
