--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@react-native-firebase/auth": "^17.5.0",
     "@react-native-firebase/firestore": "^17.5.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-element-dropdown": "^2.9.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-splash-screen": "^3.3.0"
